Completed the implementation of the crud operations on customers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,6 @@ spring:
     url: jdbc:postgresql://localhost:5433/customer
     username: kutman_3
     password: 12345
+server:
+  error:
+    include-message: always
